Docs/k8s-Examples/05-Ingress/deployment-hello-app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: hello-app-2
  name: hello-app-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app-2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello-app-2
    spec:
      containers:
      - image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:2.0
        name: hello-app
        resources: {}
status: {}
