Docs/k8s-Examples/05-Ingress/svc-hello-app1.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hello-app-1
  name: hello-app-svc-1
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-app-1
status:
  loadBalancer: {}
