Docs/k8s-Examples/05-Ingress/svc-hello-app2.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hello-app-2
  name: hello-app-svc-2
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-app-2
status:
  loadBalancer: {}
