Docs/k8s-Examples/05-Ingress/ingress-basic-routing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-basic-routing
  annotations:
    kubernetes.io/ingress.class: "gce"  
spec: 
  defaultBackend:
    service:
      name: hello-app-svc-1
      port:
       number: 8080
  rules:
    - http:
        paths:           
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: hello-app-svc-1
                port: 
                  number: 8080
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: hello-app-svc-2
                port: 
                  number: 8080
